--- a/iddaa_cpp/iddaa_cpp.vcxproj.filters
+++ b/iddaa_cpp/iddaa_cpp.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="ParseText.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Match.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Files.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Team.h">
@@ -33,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Match.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Files.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
