--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-iddaa_cpp/Debug/
-iddaa_cpp/Release/*
-!iddaa_cpp/Release/iddaa_cpp.exe
-iddaa_cpp/*.sln
-iddaa_cpp/*.exe
-iddaa_cpp/*.vcxproj
-iddaa_cpp/*.vcxproj.filters
-iddaa_cpp/*.vcxproj.user
-iddaa_cpp/.vs
-iddaa_cpp/weeks
-iddaa_cpp/Infos
+stats/Debug/
+stats/Release/*
+!stats/Release/stats.exe
+stats/*.sln
+stats/*.exe
+stats/*.vcxproj
+stats/*.vcxproj.filters
+stats/*.vcxproj.user
+stats/.vs
+stats/weeks
+stats/Infos
 .vs
